# ros2_ws

./: .gitignore  frames_2025-10-24_12.06.55.gv
install/: local_setup.sh  setup.sh
install/ackermann_msgs/share/ackermann_msgs/: package.sh
install/car_gazebo_plugin/share/car_gazebo_plugin/: package.sh
install/smart_car/lib/smart_car/: joint_state_publisher.py
install/smart_car/share/smart_car/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/smart_car/share/smart_car/cmake/: smart_carConfig-version.cmake  smart_carConfig.cmake
install/smart_car/share/smart_car/environment/: ament_prefix_path.dsv  path.dsv
install/smart_car/share/smart_car/launch/: sim.launch.py
install/smart_car/share/smart_car/scripts/: joint_state_publisher.py
install/smart_car/share/smart_car/urdf/: smart_car.urdf  smartcar.urdf.xacro
install/smart_car/share/smart_car/worlds/: empty.world  smalltown.world
install/smartcar_msgs/share/smartcar_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/car_gazebo_plugin/src/: car_gazebo_plugin.cpp
src/smart_car/: CMakeLists.txt  package.xml
src/smart_car/config/: ekf.yaml  nav2_params.yaml
src/smart_car/launch/: gazebo.launch.py  localization.launch.py  nav2.launch.py
src/smart_car/rviz/: nav2_config.rviz
src/smart_car/scripts/: joint_state_publisher.py
src/smart_car/urdf/: smart_car.urdf
src/smartcar_msgs/: CMakeLists.txt
(+5 files in other folders)
